--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.0.5",
     "@react-navigation/stack": "^6.0.4",
     "react": "16.11.0",
     "react-native": "0.62.0",
